kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservicios-ingress
spec:
  rules:
    - host: microservicios.local
      http:
        paths:
          - path: /autenticacion
            pathType: Prefix
            backend:
              service:
                name: autenticacion
                port:
                  number: 8080

          - path: /carrito
            pathType: Prefix
            backend:
              service:
                name: carrito
                port:
                  number: 8080

          - path: /catalogo
            pathType: Prefix
            backend:
              service:
                name: catalogo
                port:
                  number: 8080

          - path: /pedidos
            pathType: Prefix
            backend:
              service:
                name: pedido
                port:
                  number: 8080

          - path: /webhook
            pathType: Prefix
            backend:
              service:
                name: carrito-servicio
                port:
                  number: 8080
